# Looped-Transformer

./: Looped.md  README.md  pyproject.toml
nanochat/: checkpoint_manager.py  engine.py  loopedgpt.py
runs/: speedrun_16gb.sh  speedrun_looplm.sh
scripts/: base_train.py  bench_looplm.py  looped_train_smoke.py
